--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
+    "cookie-parser": "^1.4.7",
+    "express-handlebars": "^8.0.1",
+    "express-session": "^1.18.1",
     "hbs": "^4.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -32,6 +36,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
